# spark-challenge

./: .gitignore  README.adoc  makefile  pyproject.toml
.github/workflows/: ci.yaml
src/truata/: config.py  part1.py  part2.py  part3.py  spark.py  task_2_5.py  utils.py
tests/: conftest.py  test_part1.py  test_part2.py  test_part3.py
